--- a/Messenger/View/Styles.xaml
+++ b/Messenger/View/Styles.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:UserControls="clr-namespace:Messenger.UserControls" >
     
-    <!--Кнопка входа и регистрации-->
+    <!--Кнопка входа и регистрации (+кнопки в личном кабинете пользователя)-->
     <Style x:Key="PaletteButton" TargetType="Button">
         <Setter Property="MinWidth" Value="220"/>
         <Setter Property="MaxWidth" Value="290"/>
@@ -29,6 +29,9 @@
                             <Setter TargetName="btnBorder"
                                     Property="Background"
                                     Value="#89C1CE"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Background" Value="#EFEFEF"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -64,7 +67,7 @@
         </Style.Triggers>
     </Style>
     
-    <!--Всплывающая подсказка для невалидных полей-->
+    <!--Всплывающая подсказка для невалидных полей в форме авторизации-->
     <Style TargetType="ToolTip" x:Key="errorToolTipStyle">
         <Style.Resources>
             <Style TargetType="ContentPresenter">
@@ -82,7 +85,27 @@
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Padding" Value="5" />
     </Style>
-    
+
+
+    <!--Всплывающая подсказка для невалидных полей в профиле пользователя-->
+    <Style TargetType="ToolTip" x:Key="errorEditToolTipStyle">
+        <Style.Resources>
+            <Style TargetType="ContentPresenter">
+                <Style.Resources>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="TextWrapping" Value="Wrap" />
+                    </Style>
+                </Style.Resources>
+            </Style>
+        </Style.Resources>
+        <Setter Property="MaxWidth" Value="500" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="Opacity" Value="1" />
+        <Setter Property="Foreground" Value="#404C6C" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Padding" Value="5" />
+    </Style>
+
     <!--Всплывающая подсказка для объяснения чего-либо пользователю-->
     <Style TargetType="ToolTip" x:Key="informationToolTipStyle">
         <Style.Resources>
@@ -96,10 +119,11 @@
         </Style.Resources>
         <Setter Property="MaxWidth" Value="400" />
         <Setter Property="Background" Value="White" />
-        <Setter Property="Opacity" Value="0.9" />
+        <Setter Property="Opacity" Value="1" />
         <Setter Property="Foreground" Value="#404C6C" />
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Padding" Value="5" />
+        <Setter Property="Cursor" Value="Hand"/>
     </Style>
 
     <!--Стиль скролла-->
@@ -211,6 +235,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
     </Style>
+    
 </ResourceDictionary>
